[gd_scene load_steps=2 format=3 uid="uid://4nfhnsh216u2"]

[ext_resource type="Script" path="res://Character/Camera/camera_controller.gd" id="1_iaytv"]

[node name="CameraController" type="Node3D"]
script = ExtResource("1_iaytv")

[node name="vPivot" type="Node3D" parent="."]

[node name="SpringArm3D2" type="SpringArm3D" parent="vPivot"]
transform = Transform3D(0.978148, 0, 0.207912, 0, 1, 0, -0.207912, 0, 0.978148, 0, 2, 0)
collision_mask = 11
spring_length = 3.0

[node name="Node3D" type="Node3D" parent="vPivot/SpringArm3D2"]

[node name="Camera3D" type="Camera3D" parent="vPivot/SpringArm3D2/Node3D"]
transform = Transform3D(0.978148, 0.0538115, -0.200827, 0, 0.965926, 0.258819, 0.207912, -0.253163, 0.944818, 0, 0, 0)
